--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
     <div class="game-board">
             <h1>Distancia:</h1>
-            <span id="distance-counter">0</span>
+            <span id="distance-counter"></span>
         <img src="./assetts/clouds.png" class="clouds">
         <img src="./assetts/mario.gif" class="mario" id="mario">
         <img src="./assetts/pipe.png" class="pipe" id="pipe">
+
+        <button class="btn-reiniciar">Jogar Novamente</button>
 
     </div>
 
