--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="./assetts/mario.gif" class="mario" id="mario">
         <img src="./assetts/pipe.png" class="pipe" id="pipe">
 
-        <button class="btn-reiniciar">Jogar Novamente</button>
+        <button class="btn-reiniciar sumir">Jogar Novamente</button>
 
     </div>
 
